# Test_Chamber

./: bullets.txt  dictfile.txt  dictfileA.txt  dictfileB.txt  dictfileC.txt  main.py  pyproject.toml
static/: style.css
templates/: index.html
